# osmiumoxide

./: .gitignore  Cargo.toml  README.md  build.rs
src/: collector.rs  fileformat.rs  lib.rs  main.rs  node_index.rs  parse.rs
src/blobs/: mod.rs  probe.rs
src/blocks/: mod.rs  node.rs  relation.rs  tags.rs  way.rs  ways.rs
src/osmformat/: mod.rs  node.rs  tags.rs  ways.rs
src/util/: hasher.rs  iter.rs  mod.rs
src/util/bsmap/: from_impls.rs  mod.rs
